k8s/movies_etl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-etl
spec:
  selector: 
    matchLabels:
      app: movies-etl
  replicas: 1
  template:
    metadata:
      labels:
        app: movies-etl
    spec:
      containers:
        - name: movies-etl
          image: rikhoff/movies_etl:latest 
          resources:
            limits: 
              memory: "400Mi"
          imagePullPolicy: IfNotPresent
---
