k8s/notification-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-api
  template:
    metadata:
      labels:
        app: notification-api
    spec:
      containers:
      - name: notification-api
        image: your-notification-api-image:latest  # Замени на свой образ
        ports:
        - containerPort: 8765
