k8s/django_admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-admin-service
spec:
  type: NodePort
  selector:
    app: django-admin
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-admin-deployment
spec:
  selector: 
    matchLabels:
      app: django-admin
  replicas: 1
  template:
    metadata:
      labels:
        app: django-admin
    spec:
      containers:
        - name: django-admin
          image: rikhoff/movies_admin:latest
          volumeMounts:
            - mountPath: "/data/static"
              name: staticfiles
      volumes:
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfiles-pvc
      containers:
        - name: django-admin
          image: rikhoff/movies_admin:latest
          resources:
            limits: 
              memory: "400Mi"
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: "/admin"
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
          volumeMounts:
            - mountPath: "/data/static"
              name: staticfiles
