k8s/file_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-api-service
spec:
  type: NodePort
  selector:
    app: file-api
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-api
  template:
    metadata:
      labels:
        app: file-api
    spec:
      containers:
        - name: file-api-container
          image: rikhoff/movies_file_api:latest
          command: [ "uvicorn" ]
          args: [ "--app-dir", "./src", "main:app", "--host", "0.0.0.0", "--port", "8001" ]
          ports:
            - containerPort: 8001
          livenessProbe:
            httpGet:
              path: "/healthcheck"
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5 
          imagePullPolicy: IfNotPresent
---
