k8s/movies_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-app-service
spec:
  selector:
    app: movies-app
  ports:
    - protocol: TCP
      port: 8000
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-app
  template:
    metadata:
      labels:
        app: movies-app
    spec:
      containers:
        - name: movies-app-container
          image: rikhoff/movies_app:latest
          command: [ "uvicorn" ]
          args: [ "--app-dir", "./src", "main:app", "--host", "0.0.0.0", "--port", "8000" ]
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: "/healthcheck"
              port: 8000
              httpHeaders:
                - name: "X-Request-Id"
                  value: "test-request"
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5 
          imagePullPolicy: IfNotPresent
---
