k8s/notification-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api
spec:
  selector:
    app: notification-api
  ports:
  - port: 8765
    targetPort: 8765
  type: LoadBalancer
