k8s/postgresdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:16-alpine
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "sleep 20 && PGPASSWORD=123qwe psql movies_database -U app -c 'CREATE SCHEMA IF NOT EXISTS \"content\";'"] 
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "app", "-d", "movies_database"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
