k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-cache: "true"
    nginx.ingress.kubernetes.io/proxy-cache-valid: "200 1h, 404 10m"
    nginx.ingress.kubernetes.io/proxy-cache-use-stale: "error timeout updating http_500 http_502 http_503 http_504"
    nginx.ingress.kubernetes.io/proxy-cache-background-update: "on"
    nginx.ingress.kubernetes.io/proxy-cache-lock: "on"
    nginx.ingress.kubernetes.io/add-request-header: "X-Request-Id=$request_id"
spec:
  ingressClassName: nginx
  rules:
  - host: movie-api.local  # Здесь нужно указать ваш хост
    http:
      paths:
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: staticfiles-service
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: django-admin-service
            port:
              number: 8081
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8080
      - path: /api/files
        pathType: Prefix
        backend:
          service:
            name: file-api-service
            port:
              number: 8001
      - path: /api/notifications_api
        pathType: Prefix
        backend:
          service:
            name: notification-api
            port:
              number: 8765
      - path: /api/rating_review_api
        pathType: Prefix
        backend:
          service:
            name: rating-review-api
            port:
              number: 8766
      - path: /v1/track_event
        pathType: Prefix
        backend:
          service:
            name: flask-kafka-web
            port:
              number: 8002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movies-app-service  # Сервис, обрабатывающий основной трафик
            port:
              number: 8000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: minio.movie-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
          - path: /s3
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000

    - host: kafka-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
    - host: kibana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
---
